# Syrinx

./: CMakeLists.txt  README.md  buildAndRun.sh  main.cpp  someBase
syntax/: lamda_expressions.cpp  lamda_expressions.h  map_container.cpp  map_container.h
unionfind/: unionfind.cpp  unionfind.h
